crates/reap-durable-writer/tests/ui/durable_reservation_is_move_only.rs
use reap_durable_writer::DurableReservation;

fn replay(reservation: DurableReservation<u8>) {
    let _first = reservation.clone();
    let _second = reservation;
}

fn main() {}
